get and save coockit for json

--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Ua">
+
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-	
-		<h1>Hello World</h1>
 
-		<script src="js/main.js"></script>
+<body>
+
+	<div class="wrapper_index">
+
+		<div class="wrapper_input">
+			<label for="">Email</label>
+			<input type="email" id="email">
+			<label for="pass">Password</label>
+			<input type="password" id="pass">
+			<label for="checkPass">Repeat Password</label>
+			<input type="password" id="checkPass">
+			<input type="button" value="start" name="start">
+		</div>
+
+	</div>
+
+	<script src="js/main.js"></script>
 </body>
+
 </html>
